Fixes controller bug, adds scrollbar for decks index

--- a/app/assets/stylesheets/components/_decks_index.scss
+++ b/app/assets/stylesheets/components/_decks_index.scss
@@ -44,7 +44,7 @@
 
 .deck-container {
   top: 60px;
-  width: 28%;
+  width: 100%;
 }
 
 .fa-search {
@@ -71,6 +71,13 @@
   justify-content: space-between;
   flex-direction: column;
   background-color: white;
+}
+
+.deck-outer {
+  width: 32%;
+  height: 700px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .deck-list-item {
@@ -112,9 +119,8 @@
 
 .gray-bar {
   margin-top: 2px;
-  width: 70%;
   position: relative;
-	width: 100%;
+	width: 70%;
 	height: 10px;
 	background: #acacac;
 	-moz-border-radius: 100px;
